# calidad_FITBA

./: .env.example  .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.py  run.sh  run_cli.py  run_ngrok_tunnel.py
app/: main.py
application/dtos/: contact_dto.py
application/use_cases/: create_contact.py  get_contact_by_id.py
client/app/: __main__.py  main.py  product_gateway.py  settings.py
cliente/app/: __main__.py  (+1 more)
docs/: api_local.md  arquitectura.md  release_checklist.md  relevamiento_endpoints_xubio.md  swagger.json  todo.md  xubio.md
domain/: exceptions.py
frontend/: app.js  index.html
scripts/: release_check.py  run_coverage_suite.py
tests/: conftest.py  test_api_error_branches.py  test_api_http_smoke.py  test_api_success_branches.py  test_api_sync_push.py  test_cache_provider.py  test_categoria_fiscal_api.py  test_categoria_fiscal_gateway_xubio.py  test_client_main_flow.py  test_client_main_helpers.py  test_client_main_misc.py  test_cliente_api.py  test_cliente_gateway_memory.py  test_cliente_gateway_xubio.py  test_cliente_mapper.py  test_comprobante_venta_api.py  test_comprobante_venta_gateway_xubio.py  test_contract_swagger.py  test_deposito_api.py  test_deposito_gateway_xubio.py  test_deps.py  test_fastapi_deps_unit.py  test_handlers_unit.py  test_health.py  test_identificacion_tributaria_api.py  test_identificacion_tributaria_gateway_xubio.py  test_imports.py  test_lista_precio_api.py  test_lista_precio_gateway_xubio.py  test_local_client.py  test_local_client_success.py  test_local_xubio_replica.py  test_memory_catalog_gateways.py  test_module_entrypoints.py  test_moneda_api.py  test_moneda_gateway_xubio.py  test_observability_api.py  test_payload_validation_api.py  test_product_gateway.py  test_product_gateway_actions.py  (+35 more)
(+256 files in other folders)
