[project]
name = "contacts-crud"
version = "0.1.0"
description = "CRUD de Contactos con Clean Architecture y MySQL"
requires-python = ">=3.11"
dependencies = [
  "PyMySQL>=1.1.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests de integración (requiere DB configurada)"
]
